Fixed padding for when table is showing horizontal scroll NAS-108952

--- a/src/app/pages/common/entity/entity-tree-table/entity-tree-table.component.css
+++ b/src/app/pages/common/entity/entity-tree-table/entity-tree-table.component.css
@@ -47,8 +47,15 @@ td.action-class {
 
 th.sticky-border-right, td.sticky-border-right {
   border-right: 1px solid var(--lines);
+  padding-right: 0.5rem;
 }
 
 th.sticky-border-left, td.sticky-border-left  {
   border-left: 1px solid var(--lines);
+}
+
+
+th.scroll-padding, td.scroll-padding {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
